Bug 381921 - When using the shape editing tool, changing the fore and background color doesn't do anything.
Summary: When using the shape editing tool, changing the fore and background color doe...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Layers/Vector (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Dmitry Kazakov
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-07-02 17:06 UTC by wolthera
Modified: 2018-02-22 08:40 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description wolthera 2017-07-02 17:06:37 UTC
Code-wise, sensible, but user-wise, unexpected.

Fill and stroke can only be edited in the shape selection tool.
Comment 2 Dmitry Kazakov 2018-02-22 08:40:03 UTC
Git commit fcb2ad9401fcacddbb6ec2e4b49e8470d64fdee2 by Dmitry Kazakov.
Committed on 21/02/2018 at 10:34.
Pushed by dkazakov into branch 'master'.

Let Shape Editing Tool handle fg/bg color changes for setting shape color

M  +2    -0    libs/flake/CMakeLists.txt
A  +96   -0    libs/flake/KoShapeFillResourceConnector.cpp     [License: GPL (v2+)]
A  +45   -0    libs/flake/KoShapeFillResourceConnector.h     [License: GPL (v2+)]
R  +0    -0    libs/flake/KoShapeFillWrapper.cpp [from: libs/ui/widgets/KoShapeFillWrapper.cpp - 100% similarity]
R  +2    -2    libs/flake/KoShapeFillWrapper.h [from: libs/ui/widgets/KoShapeFillWrapper.h - 095% similarity]
M  +2    -0    libs/flake/tools/KoPathTool.cpp
M  +2    -0    libs/flake/tools/KoPathTool.h
M  +0    -1    libs/ui/CMakeLists.txt

https://commits.kde.org/krita/fcb2ad9401fcacddbb6ec2e4b49e8470d64fdee2