Let Shape Editing Tool handle fg/bg color changes for setting shape color

BUG:381921